[package]
name = "optimization-algorithms"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/optimization-algorithms"
description = "Optimization algorithms in Rust — SGD, Adam, L-BFGS, Nelder-Mead, simulated annealing, PSO, conjugate gradient"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
approx = "0.5"
